--- a/views/parks/show.ejs
+++ b/views/parks/show.ejs
@@ -14,6 +14,8 @@
     Make park <%= park.visited ? "I haven't been to yet!🤨" : "I have visited! 😃" %>
   </button>}
 </form>
+<% If (park.owner.equals(user?.profile._id)) %> 
+
 <% } %>
 </section>
 
