--- a/views/partials/html-head.ejs
+++ b/views/partials/html-head.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link id="favicon" rel="icon" href="/assets/Badge.png" type="image/png" sizes="32x32">
+    <link id="favicon" rel="icon" href="/favicon/favicon.png" type="png" sizes="32x32">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
