--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,15 +17,16 @@ html {
 }
 
 body {
-  background-color: gray;
+  background-color: rgb(237, 237, 237);
   /* Use a system font, if none are available use an available sans-sarif font */
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
   margin: 0;
+
 }
 
 nav {
-  background-color: white;
+  background-color: #AC652F;
   font-size: 1.6rem;
   display: flex;
   justify-content: center;
