--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,10 +4,10 @@
 </head>
 <body>
   <nav>
-    <a href="/parks">🏞</a>
-    <a href="/profiles">🗻</a>
+    <a href="/parks"> 🏞Parks </a>
+    <a href="/profiles"> 🗻Profiles </a>
     <% if (user) { %>
-      <a href="/auth/logout">👋</a>
+      <a href="/auth/logout"> 👋Logout </a>
     <% } else { %>
       <a href="/auth/google" class="siwg-link">
         <button type="submit" class="siwg">
