--- a/views/profiles/show.ejs
+++ b/views/profiles/show.ejs
@@ -14,16 +14,29 @@
   <h1>It's <%= isSelf ? "you" : profile.name %>!</h1>
   <% if (isSelf) { %> 
     <h2>Add a trail</h2>
-    <form action="/profiles/<%= profile._id %>/trails" method="POST">
+    <form action="/profiles/<%= profile._id %>/trails" method="POST" autocomplete="off">
       <label>
-        Name:
-        <input type="text" name="name" autocomplete="off">
+        Trail name:
+        <input type="text" name="name">
+      </label>
+      <label>
+        Mileage:
+        <input type="number" name="mileage">
       </label>
       <label>
         Difficulty:
+        <input type="text" name="difficulty">
       </label>
+      <button type="submit">Add trail🌄</button>
     </form>
-    <% } %> 
+    <% } %>
+    <% if (profile.trails.length) { %>
+      <h2>
+        
+      </h2>
+      <% } else { %>
+
+        <% } %>
 </main>
 
 <% function getRandomTrail() { %>
