--- a/views/partials/html-head.ejs
+++ b/views/partials/html-head.ejs
@@ -4,11 +4,5 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
-    <link
-    id=“favicon”
-    rel=“icon”
-    href=“/assets/favicon.png”
-    type=“image/png”
-    sizes=“32x32”
-  >
+    <link rel=“icon” type="image/png" sizes="32x32" href=“/favicon/natparkicon.png”/>
     <title><%= title %></title>
