--- a/views/partials/html-head.ejs
+++ b/views/partials/html-head.ejs
@@ -4,5 +4,5 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
-    <link rel=“icon” type="image/png" sizes="32x32" href=“/favicon/natparkicon.png”/>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico"/>
     <title><%= title %></title>
