--- a/views/profiles/index.ejs
+++ b/views/profiles/index.ejs
@@ -1,14 +1,13 @@
 <%- include('../partials/html-head') %>
-<%- include('../partials/nav') %>
-
-<link 
+<!-- <link 
   href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
   rel="stylesheet" 
   integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
   crossorigin="anonymous"
 >
-<script defer src="/javascript/main.js"></script>
+<script defer src="/javascript/main.js"></script> -->
 <%- include('../partials/nav') %>
+
 
 <main class="bg-light">
   <div class="container py-5 px-3">
@@ -45,12 +44,7 @@
   </div>
 </main>
 
-<script 
-  src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
-  integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
-  crossorigin="anonymous"
-></script>
 
-<%- include('../partials/footer') %>
+
 
 <%- include('../partials/footer') %>
