--- a/views/parks/show.ejs
+++ b/views/parks/show.ejs
@@ -3,15 +3,15 @@
 
 <section>
   <p>From the collection of <%= park.owner.name %></p>
-  <h1><%= park.name %> 🏞</h1>
-  <h2>This park <%= park.visited ? "I have visited!" : "I haven't been to yet!🤨" %></h2>
+  <h1><%= park.name %></h1>
+  <h2>This park <%= park.visited ? "I have visited!" : "I haven't been to yet!" %></h2>
   <% if (user) { %>
     <form 
     action="/parks/<%= park._id %>/flip-visited?_method=PATCH"
     method="POST"
     >
   <button class="btn" type="submit">
-    Make park <%= park.visited ? "I haven't been to yet!🤨" : "I have visited!" %>
+    Make park <%= park.visited ? "I haven't been to yet!" : "I have visited!" %>
   </button>
 </form>
 <% if (park.owner.equals(user?.profile._id)) { %> 
