--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,7 +17,8 @@ html {
 }
 
 body {
-  background-color: rgb(237, 237, 237);
+  background-color: rgba(150, 150, 150, 0.469);
+  background-image: url("public/images/canyonlands.png");
   /* Use a system font, if none are available use an available sans-sarif font */
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
@@ -27,7 +28,7 @@ body {
 
 nav {
   background-color: #AC652F;
-  font-size: 1.6rem;
+  font-size: 1.2rem;
   display: flex;
   justify-content: center;
 }
