--- a/public/stylesheets/siwg.css
+++ b/public/stylesheets/siwg.css
@@ -2,9 +2,12 @@
   background: url(/images/auth/google/siwg_light_normal.png);
   cursor: pointer;
   border: none;
-  width: 100px;
-  height: 46px;
-  
+  width: 10vw;
+  height: 5vh;
+  margin-right: 1vw;
+  display: flex;
+  justify-content: flex-end;
+  align-content: center;
 }
 
 .siwg-link {
