--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,23 +17,24 @@ html {
 }
 
 body {
-  background-color: rgba(150, 150, 150, 0.469);
-  background-image: url("public/images/canyonlands.png");
+  background-color: rgba(83, 243, 3, 0.469);
+  background-image: url("/images/craterlake.png");
   /* Use a system font, if none are available use an available sans-sarif font */
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
   margin: 0;
-
+  
 }
 
 nav {
-  background-color: #AC652F;
+  background-color: black;
   font-size: 1.2rem;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
 }
 
 main {
+  
   display: flex;
   align-items: center;
   justify-content: center;
