--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,10 +4,10 @@
 </head>
 <body>
   <nav>
-    <a href="/parks"> Parks </a>
-    <a href="/profiles"> 🗻Profiles </a>
+    <a href="/parks" class="nav"> PARKS </a>
+    <a href="/profiles" class="nav"> PROFILES </a>
     <% if (user) { %>
-      <a href="/auth/logout"> Logout </a>
+      <a href="/auth/logout"> LOGOUT </a>
     <% } else { %>
       <a href="/auth/google" class="siwg-link">
         <button type="submit" class="siwg">
