--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,20 +17,25 @@ html {
 }
 
 body {
-  background-color: rgba(83, 243, 3, 0.469);
+  
   background-image: url("/images/craterlake.png");
   /* Use a system font, if none are available use an available sans-sarif font */
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
   margin: 0;
-  
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 nav {
-  background-color: black;
-  font-size: 1.2rem;
+  
+  text-decoration: none;
+  color: white;
+  font-size: 3rem;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-around;
+  padding: 5px;
 }
 
 main {
@@ -42,5 +47,19 @@ main {
 }
 
 h1 {
-  font-size: 3.6rem;
+  font-size: 5rem;
+}
+
+button {
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  letter-spacing: 2px;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #000;
+  cursor: pointer;
+  border: 3px solid;
+  padding: 0.25em 0.5em;
+  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
+  position: relative;
 }
