--- a/views/parks/edit.ejs
+++ b/views/parks/edit.ejs
@@ -2,7 +2,7 @@
 <%- include('../partials/nav') %> 
 
 <section>
-  <h1>Edit the park! 🏞</h1>
+  <h1>Edit the park</h1>
 <form action="/parks"<%= park._id %>?_method=PUT" method="POST">
   <label for="">
     Name: 
@@ -19,7 +19,7 @@
     <%= park.visited ? "checked" : "" %>
     >
   </label>
-  <button type="submit">Edit the 🏞</button>
+  <button type="submit">Edit</button>
 </form>
 </section>
 
